--- a/webApps/main/templates/main/main.html
+++ b/webApps/main/templates/main/main.html
@@ -20,12 +20,12 @@
                         </div>
                 </li>
             </a>
-            <a href="#" class="project-button">
+            <a href="{% url 'weather' %}" class="project-button">
                 <li class="project-item">
                     App 2
                         <div class="project-info">
-                            <h3>Заголовок 2</h3>
-                            <p>Описание проекта 2</p>
+                            <h3>Weather app</h3>
+                            <p>Describtion</p>
                         </div>
                 </li>
             </a>
