--- a/webApps/main/templates/main/main.html
+++ b/webApps/main/templates/main/main.html
@@ -10,7 +10,7 @@
         <h2 style="user-select: none">PROJECTS</h2>
         <ul class="project-buttons">
             <a href="{% url 'todo' %}" class="project-button">
-                <li class="project-item">
+                <li class="project-item" style="user-select: none">
                     App 1
                         <div class="project-info">
                             <h3>TodoList App</h3>
@@ -21,16 +21,17 @@
                 </li>
             </a>
             <a href="{% url 'weather' %}" class="project-button">
-                <li class="project-item">
+                <li class="project-item" style="user-select: none">
                     App 2
                         <div class="project-info">
                             <h3>Weather app</h3>
-                            <p>Describtion</p>
+                            <p>This weather app provides a simple and intuitive way to check the current weather conditions in any city.
+                                Stay informed with accurate temperature, weather icons, and a clean interface, ensuring you're prepared for the day ahead.</p>
                         </div>
                 </li>
             </a>
             <a href="#" class="project-button">
-                <li class="project-item">
+                <li class="project-item" style="user-select: none">
                     App 3
                         <div class="project-info">
                             <h3>Заголовок 3</h3>
