--- a/webApps/main/templates/main/main.html
+++ b/webApps/main/templates/main/main.html
@@ -14,9 +14,8 @@
                     App 1
                         <div class="project-info">
                             <h3>TodoList App</h3>
-                            <p>The Todolist app is a straightforward task management tool that helps users organize their daily activities.
-                                Users can easily add, edit, and delete tasks, as well as mark them as completed. With a clean and user-friendly interface,
-                                the app provides a seamless experience for staying on top of tasks and boosting productivity.</p>
+                            <p>Application for viewing, adding and deleting tasks to complete.
+                                Simple, intuitive and user-friendly design.</p>
                         </div>
                 </li>
             </a>
@@ -25,17 +24,20 @@
                     App 2
                         <div class="project-info">
                             <h3>Weather app</h3>
-                            <p>This weather app provides a simple and intuitive way to check the current weather conditions in any city.
-                                Stay informed with accurate temperature, weather icons, and a clean interface, ensuring you're prepared for the day ahead.</p>
+                            <p>Application for viewing the current weather in the city.
+                                It is possible to save the results of past queries, as well as remove
+                                cities from the search history.</p>
                         </div>
                 </li>
             </a>
-            <a href="#" class="project-button">
+            <a href="{% url 'converter' %}" class="project-button">
                 <li class="project-item" style="user-select: none">
                     App 3
                         <div class="project-info">
-                            <h3>Заголовок 3</h3>
-                            <p>Описание проекта 3</p>
+                            <h3>Currency Converter</h3>
+                            <p>Application for converting from one currency to another.
+                                Simple and convenient design. Data is obtained from an external source and
+                                updated with each request.</p>
                         </div>
                 </li>
             </a>
