--- a/webApps/weather/templates/weather/weather.html
+++ b/webApps/weather/templates/weather/weather.html
@@ -23,7 +23,7 @@
         </form>
     </div>
 
-    <div style="width: 650px; margin-top: 60px; margin-right: 100px;">
+    <div class="weather-container">
         <h4 class="text-center text-black p-2">History</h4>
         <div class="weather ">
             {% if all_info %}
