--- a/webApps/main/templates/main/base.html
+++ b/webApps/main/templates/main/base.html
@@ -22,9 +22,8 @@
         </div>
          <ul class="header-nav">
             <a href="{% url 'home' %}"><li>Home</li></a>
-            <a href="#"><li>About</li></a>
-            <a href="#"><li>Portfolio</li></a>
-            <a href="#"><li>Contact</li></a>
+            <a href="{% url 'about' %}"><li>About</li></a>
+            <a href="{% url 'contact' %}"><li>Contact</li></a>
          </ul>
     </header>
     
